TI Agent changes

--- a/reactor-core/build.gradle
+++ b/reactor-core/build.gradle
@@ -278,6 +278,10 @@ tasks.withType(Test).all {
 		//default to JunitPlatform
 		useJUnitPlatform()
 	}
+
+	if(System.getProperty("HARNESS_JAVA_AGENT")) {
+		jvmArgs += [System.getProperty("HARNESS_JAVA_AGENT")]
+	}
 }
 
 tckTest {
