--- a/reactor-core-micrometer/build.gradle
+++ b/reactor-core-micrometer/build.gradle
@@ -75,7 +75,10 @@ dependencies {
 }
 
 tasks.withType(Test).all {
-  useJUnitPlatform()
+	if(System.getProperty("HARNESS_JAVA_AGENT")) {
+		jvmArgs += [System.getProperty("HARNESS_JAVA_AGENT")]
+	}
+  	useJUnitPlatform()
 }
 
 // javadoc is configured in gradle/javadoc.gradle
